--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>HTML is amazing</h2>
     <body>
         <p>HTML 5 with CSS 3 is the best combo for creating web pages</p>
-        <img src = "c://Users//Public//Cherian//my-website//docs//html5.png"
+        <img src = "html5.png"
              alt = "The HTML 5 logo"
              height = "300" width = "300">
     </body>
@@ -20,7 +20,7 @@
         <p><a href = "https://en.wikipedia.org/wiki/HTML5" target = "_blank">HTML5 in Wikipedia</a></p>
     </body>    
     <body>
-        <p><img src = "c://Users//Public//Cherian//my-website//docs//calvinbrown.jpg"
+        <p><img src = "calvinbrown.jpg"
                 alt = "This is me"></p>
         <p><strong>Calvin Brown</strong></p>    
     </body> 
