--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                     adipisicing, enim cernantur aut familiaritatem.
                 </p>
                 <img src="html5.png" alt="Html 5 Logo">
+                <a href="https://en.wikipedia.org/wiki/HTML5"> Click here </a> for a more detailed description
             </div>
             <div class="other-posts">
                 <div class="other">
