--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     adipisicing, enim cernantur aut familiaritatem.
                 </p>
                 <img src="html5.png" alt="Html 5 Logo">
-                <a href="https://en.wikipedia.org/wiki/HTML5" target="_blank"> Click here </a> for a more detailed description
+                <p><a href="https://en.wikipedia.org/wiki/HTML5" target="_blank"> Click here </a> for a more detailed description</p>
             </div>
             <div class="other-posts">
                 <div class="other">
