--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             </div>
             <div class="clearfix"></div>
             <div class="author-box">
-                <img src="calvinbrown.jpg" alt="Author: Calvin Brown">
-                <p class="author-text">Calvin Brown</p>        
+                <img src="anonymous.jpg" alt="Anonymous">
+                <p class="author-text">Anonymous</p>        
             </div>
         </div>
         
